syntax = "proto3";

package proto;

message CreateUserTokenData {
    string UserID = 1;
    string AccessToken = 2;
    string RefreshToken = 3;
    int64 Expiry = 4;
}

message Error {
    string Message = 1;
    int32 StatusCode = 2;
}

service AuthService {
    rpc CreateUserToken(CreateUserTokenData) returns (Error) {}
}